--- a/taverna/templates/homepage.html
+++ b/taverna/templates/homepage.html
@@ -60,13 +60,18 @@
 
           <a href="/criarconta" class="link-criarconta">Criar Conta</a>
         </form>
+        <p>
+        <a href="{{ url_for('sponsors') }}">Aliados da Jornada</a>
+    </p>
         {% endblock %}
       </div>
+      
     </div>
   </section>
 
   <!-- Footer -->
   <footer class="rodape">
+     
     &copy; 2025 LincolnTech - English Teacher Quest. Todos os direitos reservados.
   </footer>
 </body>
