--- a/taverna/templates/navbar.html
+++ b/taverna/templates/navbar.html
@@ -15,6 +15,7 @@
       <a href="{{ url_for('feed') }}">Feed</a>
       <a href="{{ url_for('perfil', id_usuario=current_user.id) }}">Perfil</a>
       <a href="{{ url_for('novo_projeto') }}">Novo Projeto</a>
+      <a href="{{ url_for('sponsors') }}">Aliados da Jornada</a>
       <a href="{{ url_for('logout') }}">Sair</a>
     </div>
   </div>
