--- a/taverna/templates/feed.html
+++ b/taverna/templates/feed.html
@@ -105,7 +105,9 @@ Feed da Taverna
               'doc': 'lontra-docx.png',
               'docx': 'lontra-docx.png',
               'ppt': 'lontra-pptx.png',
-              'pptx': 'lontra-pptx.png'
+              'pptx': 'lontra-pptx.png',
+              'csv': 'lontra-csv.png',
+              'xlsx': 'lontra-xlsx.png'
             } %}
             {% set icone = icones.get(extensao, 'lontra-default.png') %}
 
