--- a/taverna/templates/perfil.html
+++ b/taverna/templates/perfil.html
@@ -49,7 +49,9 @@ Perfil - {{ usuario.username }}
                     'doc': 'lontra-docx.png',
                     'docx': 'lontra-docx.png',
                     'ppt': 'lontra-pptx.png',
-                    'pptx': 'lontra-pptx.png'
+                    'pptx': 'lontra-pptx.png',
+                    'csv': 'lontra-csv.png',
+                    'xlsx': 'lontra-xlsx.png'
                   } %}
                   {% set icone = icones.get(tipo, 'lontra-default.png') %}
                   <div class="arquivo-generico">
