--- a/taverna/templates/visualizar_projeto.html
+++ b/taverna/templates/visualizar_projeto.html
@@ -25,7 +25,9 @@
       'doc': 'lontra-docx.png',
       'docx': 'lontra-docx.png',
       'ppt': 'lontra-pptx.png',
-      'pptx': 'lontra-pptx.png'
+      'pptx': 'lontra-pptx.png',
+      'csv': 'lontra-csv.png',
+      'xlsx': 'lontra-xlsx.png'
     } %}
 
     <!-- Miniatura principal -->
