--- a/taverna/static/css/style.css
+++ b/taverna/static/css/style.css
@@ -1278,6 +1278,26 @@ html, body {
   object-fit: cover;
   border: 3px solid #6c4ed2;
 }
+
+.avatar-life {
+  --progress: 0%;
+  position: relative;
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  background: conic-gradient(#6c4ed2 var(--progress), #ddd 0);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 5px;
+}
+
+.avatar-life .avatar-perfil {
+  width: 100%;
+  height: 100%;
+  border: none;
+  margin: 0;
+}
 @keyframes fadeInUp {
   from {
     opacity: 0;
