--- a/taverna/templates/homepage.html
+++ b/taverna/templates/homepage.html
@@ -10,7 +10,10 @@
   </title>
 
   <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/carousel.css') }}">
   <link rel="icon" href="{{ url_for('static', filename='favicon.png') }}" type="image/png">
+
+  <script defer src="{{ url_for('static', filename='js/carousel.js') }}"></script>
 
 
 </head>
